<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dumb_view"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/goToLiveDataMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/pokeButton"
        android:text="@string/livedata_main"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleMain"
        />

    <Button
        android:id="@+id/goToViewStateMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/pokeButton"
        android:text="@string/viewstate_main"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/goToLiveDataMain"
        />

    <Button
        android:id="@+id/goToGenericViewStateMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/pokeButton"
        android:text="@string/generic_viewstate_main"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/goToViewStateMain"
        />

    <Button
        android:id="@+id/goToInterfaceMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/pokeButton"
        android:text="@string/interface_main"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/goToGenericViewStateMain"
        />

</androidx.constraintlayout.widget.ConstraintLayout>